--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -17,12 +17,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/preview"
+    <com.ashique.qrscanner.custom.Frame
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:contentDescription="TODO" />
+        android:layout_height="wrap_content"
+        app:backgroundColor="@color/white"
+        app:cornerRadius="5dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <ImageView
+            android:id="@+id/preview"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+
+            android:contentDescription="TODO" />
+
+
+    </com.ashique.qrscanner.custom.Frame>
 
 
     <com.ashique.qrscanner.custom.Buttons
@@ -77,5 +86,22 @@
         android:textColor="@color/text"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
 
+
+    <com.ashique.qrscanner.custom.Frame
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundColor="@color/white"
+        app:cornerRadius="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" >
+        <ImageView
+            android:id="@+id/dotImageView"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/goku2"
+            app:_color="true"
+            app:_quality="1dp"
+            />
+    </com.ashique.qrscanner.custom.Frame>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
