--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,11 +18,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.ashique.qrscanner.custom.Frame
+        android:id="@+id/frame2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:backgroundColor="@color/white"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent">
+
         <ImageView
             android:id="@+id/preview"
             android:layout_width="match_parent"
@@ -88,20 +90,48 @@
 
 
     <com.ashique.qrscanner.custom.Frame
+        android:id="@+id/frame3"
+        android:layout_width="wrap_content"
+        android:layout_height="280dp"
+        app:backgroundColor="@color/white"
+        app:cornerRadius="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/bitImageView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="@drawable/goku"
+                app:_color="true"
+                app:_quality="1dp" />
+
+            <ImageView
+                android:id="@+id/dotImageView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="@drawable/goku2"
+                app:_color="true"
+                app:_quality="1dp" />
+        </LinearLayout>
+
+    </com.ashique.qrscanner.custom.Frame>
+
+    <com.ashique.qrscanner.custom.Frame
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:backgroundColor="@color/white"
         app:cornerRadius="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" >
-        <ImageView
-            android:id="@+id/dotImageView"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/goku2"
-            app:_color="true"
-            app:_quality="1dp"
-            />
+        app:layout_constraintTop_toBottomOf="@+id/frame3">
+
+
     </com.ashique.qrscanner.custom.Frame>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
