--- a/app/src/main/res/layout/layout_qr_background.xml
+++ b/app/src/main/res/layout/layout_qr_background.xml
@@ -23,22 +23,46 @@
             android:textColor="@color/text"
             android:textSize="14sp" />
 
-        <com.ashique.qrscanner.custom.Buttons
-            android:id="@+id/btn_importBackground"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="4dp"
-            app:_activeColor="@color/text"
-            app:_activeIconColor="@color/icon_active"
-            app:_borderColor="@color/radio_buttons_border"
-            app:_borderWidth="1dp"
-            app:_fillColor="@color/radio_buttons_border"
-            app:_icon="@drawable/ic_import"
-            app:_iconColor="@color/text"
-            app:_iconHeight="30dp"
-            app:_iconWidth="30dp"
-            app:_radius="3dp" />
+            android:layout_height="wrap_content">
+            <com.ashique.qrscanner.custom.Buttons
+                android:id="@+id/btn_importBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="4dp"
+                app:_activeColor="@color/text"
+                app:_activeIconColor="@color/icon_active"
+                app:_borderColor="@color/radio_buttons_border"
+                app:_borderWidth="1dp"
+                app:_fillColor="@color/radio_buttons_border"
+                app:_icon="@drawable/ic_import"
+                app:_iconColor="@color/text"
+                app:_iconHeight="30dp"
+                app:_iconWidth="30dp"
+                app:_radius="3dp" />
+
+
+            <com.ashique.qrscanner.custom.Buttons
+                android:id="@+id/btn_halftone_effect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:gravity="center"
+                android:padding="4dp"
+                app:_activeColor="@color/text"
+                app:_activeIconColor="@color/icon_active"
+                app:_borderColor="@color/radio_buttons_border"
+                app:_borderWidth="1dp"
+                app:_fillColor="@color/radio_buttons_border"
+                app:_icon="@drawable/ic_radial"
+                app:_iconColor="@color/text"
+                app:_iconHeight="30dp"
+                app:_iconWidth="30dp"
+                app:_radius="3dp" />
+        </LinearLayout>
+
 
     </LinearLayout>
 
