--- a/app/src/main/res/layout/qr_generator.xml
+++ b/app/src/main/res/layout/qr_generator.xml
@@ -22,13 +22,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-      <FrameLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
+      <com.ashique.qrscanner.custom.Frame
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          app:cornerRadius="5dp"
+          android:layout_marginTop="6dp">
           <ImageView
               android:id="@+id/gifView"
               android:layout_width="300dp"
               android:layout_height="300dp"
+              android:scaleType="centerCrop"
               android:layout_gravity="center"
               android:contentDescription="@string/image" />
           <ImageView
@@ -39,7 +42,7 @@
               android:layout_gravity="center"
               android:contentDescription="@string/image" />
 
-      </FrameLayout>
+      </com.ashique.qrscanner.custom.Frame>
 
         <Space
             android:layout_width="wrap_content"
@@ -69,11 +72,23 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <Button
-            android:id="@+id/btn_save_qr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save" />
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center">
+          <Button
+              android:id="@+id/btn_save_qr"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Save" />
+
+          <Button
+              android:id="@+id/btn_save_gif"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="10dp"
+              android:text="Generate Gif" />
+      </LinearLayout>
 
         <Space
             android:layout_width="wrap_content"
@@ -123,6 +138,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_frame" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
